logs/Slang/generated/keywords/5.6.2--keyword_realtime.sv.log
name: keyword_realtime
description: The 'realtime' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_realtime.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_realtime.sv:8:8: error: expected declarator
    bit realtime;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_realtime.sv:8:17: error: expected declarator
    bit realtime;
                ^
